foundation-objs/main/default/objects/Activity/fields/account_segment__c.field-meta.xml
<CustomField>
    <fullName>account_segment__c</fullName>
    <label>Account Segment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>