foundation-objs/main/default/objects/Activity/fields/Activity_ID_18__c.field-meta.xml
<CustomField>
    <fullName>Activity_ID_18__c</fullName>
    <formula>CASESAFEID(Related_Account__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account ID (18)</label>
    <type>Text</type>
</CustomField>