foundation-objs/main/default/objects/Activity/fields/Activity_Owner__c.field-meta.xml
<CustomField>
    <fullName>Activity_Owner__c</fullName>
    <formula>Owner:User.FirstName &amp;&quot; &quot;&amp; Owner:User.LastName</formula>
    <label>Activity Owner</label>
    <type>Text</type>
</CustomField>