foundation-objs/main/default/objects/Activity/fields/Activity_Owner_Division__c.field-meta.xml
<CustomField>
    <fullName>Activity_Owner_Division__c</fullName>
    <formula>Owner:User.Division</formula>
    <label>Activity Owner: Division</label>
    <type>Text</type>
</CustomField>