foundation-objs/main/default/objects/Activity/fields/Activity_Owner_Manager__c.field-meta.xml
<CustomField>
    <fullName>Activity_Owner_Manager__c</fullName>
    <formula>Owner:User.Manager.FirstName &amp;&quot; &quot;&amp; Owner:User.Manager.LastName</formula>
    <label>Task Owner: Manager</label>
    <type>Text</type>
</CustomField>