foundation-objs/main/default/objects/Activity/fields/Activity_owner_Team_WBR_C__c.field-meta.xml
<CustomField>
    <fullName>Activity_owner_Team_WBR_C__c</fullName>
    <formula>Owner:User.Team_WBR_C__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Activity owner Team(WBR)(C)</label>
    <type>Text</type>
</CustomField>