foundation-objs/main/default/objects/Activity/fields/Approval_Rejected_Comment__c.field-meta.xml
<CustomField>
    <fullName>Approval_Rejected_Comment__c</fullName>
    <label>Approval/Rejected Comment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>