foundation-objs/main/default/objects/Activity/fields/Approved_Rejected_By__c.field-meta.xml
<CustomField>
    <fullName>Approved_Rejected_By__c</fullName>
    <label>Approved/Rejected By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>