foundation-objs/main/default/objects/Activity/fields/Approved_Rejected_Date__c.field-meta.xml
<CustomField>
    <fullName>Approved_Rejected_Date__c</fullName>
    <label>Approved/Rejected Date</label>
    <type>Date</type>
</CustomField>