foundation-objs/main/default/objects/Activity/fields/Asset_Account_CSM_Email__c.field-meta.xml
<CustomField>
    <fullName>Asset_Account_CSM_Email__c</fullName>
    <label>Asset Account CSM Email</label>
    <type>Email</type>
</CustomField>