foundation-objs/main/default/objects/Activity/fields/Asset_Activation_flag__c.field-meta.xml
<CustomField>
    <fullName>Asset_Activation_flag__c</fullName>
    <label>Asset Activation flag</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Success Pending</fullName>
            </value>
            <value>
                <fullName>Success</fullName>
            </value>
            <value>
                <fullName>Historic</fullName>
            </value>
            <value>
                <fullName>Usage not Tracked</fullName>
            </value>
            <value>
                <fullName>Managed Services</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>