foundation-objs/main/default/objects/Activity/fields/Asset_Opportunity_Source__c.field-meta.xml
<CustomField>
    <fullName>Asset_Opportunity_Source__c</fullName>
    <label>Asset  Opportunity Source</label>
    <length>255</length>
    <type>Text</type>
</CustomField>