foundation-objs/main/default/objects/Activity/fields/asset_status__c.field-meta.xml
<CustomField>
    <fullName>asset_status__c</fullName>
    <label>Asset Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>