foundation-objs/main/default/objects/Activity/fields/Asset_success_flag__c.field-meta.xml
<CustomField>
    <fullName>Asset_success_flag__c</fullName>
    <label>Asset success flag</label>
    <length>255</length>
    <type>Text</type>
</CustomField>