foundation-objs/main/default/objects/Activity/fields/Asset_to_be_deleted__c.field-meta.xml
<CustomField>
    <fullName>Asset_to_be_deleted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Asset to be Deleted</label>
    <type>Checkbox</type>
</CustomField>