foundation-objs/main/default/objects/Activity/fields/Asset_Update_Account_Owner_Email__c.field-meta.xml
<CustomField>
    <fullName>Asset_Update_Account_Owner_Email__c</fullName>
    <label>Asset Update Account Owner Email</label>
    <type>Email</type>
</CustomField>