foundation-objs/main/default/objects/Activity/fields/Call_information__c.field-meta.xml
<CustomField>
    <fullName>Call_information__c</fullName>
    <label>Call information</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Churn</fullName>
            </value>
            <value>
                <fullName>Contact details not available</fullName>
            </value>
            <value>
                <fullName>Customer having Pricing issue</fullName>
            </value>
            <value>
                <fullName>Customer not reachable</fullName>
            </value>
            <value>
                <fullName>EINV not applicable</fullName>
            </value>
            <value>
                <fullName>Feature required not available</fullName>
            </value>
            <value>
                <fullName>Final approval pending-Client</fullName>
            </value>
            <value>
                <fullName>Incorrect KAM mapping</fullName>
            </value>
            <value>
                <fullName>Incorrect SF update</fullName>
            </value>
            <value>
                <fullName>Integration completed but not updated in SF</fullName>
            </value>
            <value>
                <fullName>Integration pending - Client</fullName>
            </value>
            <value>
                <fullName>Integration pending - CT</fullName>
            </value>
            <value>
                <fullName>Integration pending - SI</fullName>
            </value>
            <value>
                <fullName>Integration pending but using product manually</fullName>
            </value>
            <value>
                <fullName>No Risk - But using govt tool/ consultant as well</fullName>
            </value>
            <value>
                <fullName>No Risk - Low volume</fullName>
            </value>
            <value>
                <fullName>No Risk - Once a month activity (EINV)</fullName>
            </value>
            <value>
                <fullName>No Risk -Renewal Period correction</fullName>
            </value>
            <value>
                <fullName>Onboarding completed but not updated in SF</fullName>
            </value>
            <value>
                <fullName>Onboarding denied due to pending integration</fullName>
            </value>
            <value>
                <fullName>Onboarding pending-Client</fullName>
            </value>
            <value>
                <fullName>Onboarding pending-CT</fullName>
            </value>
            <value>
                <fullName>One time engagement</fullName>
            </value>
            <value>
                <fullName>Only API client</fullName>
            </value>
            <value>
                <fullName>Parent renewal completed - SF needs to be updated</fullName>
            </value>
            <value>
                <fullName>POC change - Not responding</fullName>
            </value>
            <value>
                <fullName>Pricing approval pending with CT-Finance</fullName>
            </value>
            <value>
                <fullName>Product bugs/issue</fullName>
            </value>
            <value>
                <fullName>Renewal completed but not updated in SF</fullName>
            </value>
            <value>
                <fullName>Support issue/ training required</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>