foundation-objs/main/default/objects/Activity/fields/Check_In_Location__c.field-meta.xml
<CustomField>
    <fullName>Check_In_Location__c</fullName>
    <label>Check-In Location</label>
    <scale>2</scale>
    <type>Location</type>
</CustomField>