foundation-objs/main/default/objects/Activity/fields/Comment__c.field-meta.xml
<CustomField>
    <fullName>Comment__c</fullName>
    <defaultValue>&quot;1)Expected date of renewal:&quot;+BR()+
&quot;2)Opportunity link of the new renewal:&quot;+BR()+
&quot;3)Reason for Delay (edited):&quot;</defaultValue>
    <label>Comment</label>
    <type>TextArea</type>
</CustomField>