foundation-objs/main/default/objects/Activity/fields/Company_s_Onboarding_Stage__c.field-meta.xml
<CustomField>
    <fullName>Company_s_Onboarding_Stage__c</fullName>
    <label>Company&apos;s Onboarding Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>LOE Verification</fullName>
            </value>
            <value>
                <fullName>CSM introduction mail</fullName>
            </value>
            <value>
                <fullName>Introductory call with the client</fullName>
            </value>
            <value>
                <fullName>Client Expectation Checklist</fullName>
            </value>
            <value>
                <fullName>Changes in LOE &amp; SF</fullName>
            </value>
            <value>
                <fullName>Onboarding plan design</fullName>
            </value>
            <value>
                <fullName>Onboarding mail</fullName>
            </value>
            <value>
                <fullName>Onboarding pre-requisites from client</fullName>
            </value>
            <value>
                <fullName>Onboarding Meeting Scheduled</fullName>
            </value>
            <value>
                <fullName>Training / Onboarding session</fullName>
            </value>
            <value>
                <fullName>Post onboarding mail</fullName>
            </value>
            <value>
                <fullName>Feedback collection</fullName>
            </value>
            <value>
                <fullName>Success Engagement call</fullName>
            </value>
            <value>
                <fullName>Client Support Call</fullName>
            </value>
            <value>
                <fullName>Client Re-training post onboarding completion</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>