foundation-objs/main/default/objects/Activity/fields/Count_PO_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Count_PO_End_Date__c</fullName>
    <formula>IF( ISPICKVAL(Status,&apos;Approved&apos;) &amp;&amp;  (!ISBLANK( New_Value_PO_End_date__c )),1,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Count PO End Date</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>