foundation-objs/main/default/objects/Activity/fields/Count_Price__c.field-meta.xml
<CustomField>
    <fullName>Count_Price__c</fullName>
    <formula>IF( ISPICKVAL(Status,&apos;Approved&apos;) &amp;&amp;  (New_Value_Price__c &gt; 0) ,1,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Count Price</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>