foundation-objs/main/default/objects/Activity/fields/Count_Product__c.field-meta.xml
<CustomField>
    <fullName>Count_Product__c</fullName>
    <formula>IF( ISPICKVAL(Status,&apos;Approved&apos;) &amp;&amp; (!ISBLANK(  New_Value_Product__c  )),1,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Count Product</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>