foundation-objs/main/default/objects/Activity/fields/Days_to_Extend__c.field-meta.xml
<CustomField>
    <fullName>Days_to_Extend__c</fullName>
    <inlineHelpText>Please check the “Number of days license is extended by” field in asset, for any existing extensions
Data Owner.</inlineHelpText>
    <label>Additional number of days to extend</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>