foundation-objs/main/default/objects/Activity/fields/deleted_Asset_Backend__c.field-meta.xml
<CustomField>
    <fullName>deleted_Asset_Backend__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>deleted Asset Backend</label>
    <referenceTo>Asset</referenceTo>
    <relationshipLabel>Deletion Task</relationshipLabel>
    <relationshipName>DeletionTask</relationshipName>
    <type>Lookup</type>
</CustomField>