foundation-objs/main/default/objects/Activity/fields/Demo_POC_Completed_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Demo_POC_Completed_Date_Time__c</fullName>
    <label>Demo/POC Completed Date/Time</label>
    <type>DateTime</type>
</CustomField>