foundation-objs/main/default/objects/Activity/fields/Demo_Rescheduled__c.field-meta.xml
<CustomField>
    <fullName>Demo_Rescheduled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Demo Rescheduled</label>
    <type>Checkbox</type>
</CustomField>