foundation-objs/main/default/objects/Activity/fields/Department__c.field-meta.xml
<CustomField>
    <fullName>Department__c</fullName>
    <formula>Owner:User.Department</formula>
    <label>Task Owner: Department</label>
    <type>Text</type>
</CustomField>