foundation-objs/main/default/objects/Activity/fields/Designation_of_POC__c.field-meta.xml
<CustomField>
    <fullName>Designation_of_POC__c</fullName>
    <label>Designation of POC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>