foundation-objs/main/default/objects/Activity/fields/Email_Asset_Update__c.field-meta.xml
<CustomField>
    <fullName>Email_Asset_Update__c</fullName>
    <label>Email Asset Update</label>
    <type>Email</type>
</CustomField>