foundation-objs/main/default/objects/Activity/fields/Email_of_POC__c.field-meta.xml
<CustomField>
    <fullName>Email_of_POC__c</fullName>
    <label>Email of POC</label>
    <type>Email</type>
</CustomField>