foundation-objs/main/default/objects/Activity/fields/Finance_Approval_Needed__c.field-meta.xml
<CustomField>
    <fullName>Finance_Approval_Needed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Finance Approval Needed</label>
    <type>Checkbox</type>
</CustomField>