foundation-objs/main/default/objects/Activity/fields/Follow_Update_Date_Account__c.field-meta.xml
<CustomField>
    <fullName>Follow_Update_Date_Account__c</fullName>
    <label>Follow Up Date</label>
    <type>DateTime</type>
</CustomField>