foundation-objs/main/default/objects/Activity/fields/License_B2C_SalesInvoice_per_year__c.field-meta.xml
<CustomField>
    <fullName>License_B2C_SalesInvoice_per_year__c</fullName>
    <label>No. of B2C sales invoice</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>