foundation-objs/main/default/objects/Activity/fields/License_no_of_gstin_verification_credits__c.field-meta.xml
<CustomField>
    <fullName>License_no_of_gstin_verification_credits__c</fullName>
    <label>No. of GSTIN verification credits</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>