foundation-objs/main/default/objects/Activity/fields/License_no_of_userids__c.field-meta.xml
<CustomField>
    <fullName>License_no_of_userids__c</fullName>
    <label>No. of User IDs</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>