foundation-objs/main/default/objects/Activity/fields/Location_Master__c.field-meta.xml
<CustomField>
    <fullName>Location_Master__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Location</label>
    <referenceTo>Location_Master__c</referenceTo>
    <relationshipLabel>Lookup Location</relationshipLabel>
    <relationshipName>location_master_lookup</relationshipName>
    <type>Lookup</type>
</CustomField>