foundation-objs/main/default/objects/Activity/fields/Minutes__c.field-meta.xml
<CustomField>
    <fullName>Minutes__c</fullName>
    <label>Minutes</label>
    <type>TextArea</type>
</CustomField>