foundation-objs/main/default/objects/Activity/fields/Minutes_Of_Meeting__c.field-meta.xml
<CustomField>
    <fullName>Minutes_Of_Meeting__c</fullName>
    <description>Used for Opportunity/lead</description>
    <label>Minutes Of Meeting</label>
    <type>TextArea</type>
</CustomField>