foundation-objs/main/default/objects/Activity/fields/MOM__c.field-meta.xml
<CustomField>
    <fullName>MOM__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>MOM</label>
    <referenceTo>MOM__c</referenceTo>
    <relationshipLabel>Activities</relationshipLabel>
    <relationshipName>Activities</relationshipName>
    <type>Lookup</type>
</CustomField>