foundation-objs/main/default/objects/Activity/fields/Multi_year__c.field-meta.xml
<CustomField>
    <fullName>Multi_year__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Multi-year</label>
    <type>Checkbox</type>
</CustomField>