foundation-objs/main/default/objects/Activity/fields/New_Value_PO_End_date__c.field-meta.xml
<CustomField>
    <fullName>New_Value_PO_End_date__c</fullName>
    <label>New Period End date</label>
    <type>Date</type>
</CustomField>