foundation-objs/main/default/objects/Activity/fields/New_Value_PO_Start_date__c.field-meta.xml
<CustomField>
    <fullName>New_Value_PO_Start_date__c</fullName>
    <label>New Period Start date</label>
    <type>Date</type>
</CustomField>