foundation-objs/main/default/objects/Activity/fields/New_Value_Price__c.field-meta.xml
<CustomField>
    <fullName>New_Value_Price__c</fullName>
    <label>New Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>