foundation-objs/main/default/objects/Activity/fields/New_Value_Product__c.field-meta.xml
<CustomField>
    <fullName>New_Value_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>New Product</label>
    <lookupFilter>
        <active>false</active>
        <filterItems>
            <field>$Source.CurrencyIsoCode</field>
            <operation>equals</operation>
            <valueField>Product2.CurrencyIsoCode</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Task Asset Modification New Product</relationshipLabel>
    <relationshipName>New_Product</relationshipName>
    <type>Lookup</type>
</CustomField>