foundation-objs/main/default/objects/Activity/fields/No_of_airline_invoices__c.field-meta.xml
<CustomField>
    <fullName>No_of_airline_invoices__c</fullName>
    <label>No. of airline invoices</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>