foundation-objs/main/default/objects/Activity/fields/No_of_Vendor__c.field-meta.xml
<CustomField>
    <fullName>No_of_Vendor__c</fullName>
    <label>No. of Vendor</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>