foundation-objs/main/default/objects/Activity/fields/Number_of_Purchase_Invoice__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Purchase_Invoice__c</fullName>
    <label>No. of Purchase Invoice</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>