foundation-objs/main/default/objects/Activity/fields/Object_Created_On__c.field-meta.xml
<CustomField>
    <fullName>Object_Created_On__c</fullName>
    <label>Object(Created On)</label>
    <length>20</length>
    <type>Text</type>
</CustomField>