foundation-objs/main/default/objects/Activity/fields/Old_Value_PO_Start_date__c.field-meta.xml
<CustomField>
    <fullName>Old_Value_PO_Start_date__c</fullName>
    <label>Old Period Start date</label>
    <type>Date</type>
</CustomField>