foundation-objs/main/default/objects/Activity/fields/Old_Value_Price__c.field-meta.xml
<CustomField>
    <fullName>Old_Value_Price__c</fullName>
    <label>Old Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>