foundation-objs/main/default/objects/Activity/fields/Old_Value_Product__c.field-meta.xml
<CustomField>
    <fullName>Old_Value_Product__c</fullName>
    <label>Old Product</label>
    <length>255</length>
    <type>Text</type>
</CustomField>