foundation-objs/main/default/objects/Activity/fields/Pending_For_In_Hours__c.field-meta.xml
<CustomField>
    <fullName>Pending_For_In_Hours__c</fullName>
    <formula>(NOW() -CreatedDate)*24</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Pending For(In Hours)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>