foundation-objs/main/default/objects/Activity/fields/PO_End_Month__c.field-meta.xml
<CustomField>
    <fullName>PO_End_Month__c</fullName>
    <formula>CASE(MONTH(New_Value_PO_End_date__c),
1, &quot;January&quot;,
2, &quot;February&quot;,
3, &quot;March&quot;,
4, &quot;April&quot;,
5, &quot;May&quot;,
6, &quot;June&quot;,
7, &quot;July&quot;,
8, &quot;August&quot;,
9, &quot;September&quot;,
10, &quot;October&quot;,
11, &quot;November&quot;,
12, &quot;December&quot;,
&quot;None&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PO End Month</label>
    <type>Text</type>
</CustomField>