foundation-objs/main/default/objects/Activity/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <description>Demo/POC field for Lead activity</description>
    <label>Product</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Airline Credit</fullName>
            </value>
            <value>
                <fullName>ASP/GSP</fullName>
            </value>
            <value>
                <fullName>CFO Dashboard</fullName>
            </value>
            <value>
                <fullName>E-Invoicing</fullName>
            </value>
            <value>
                <fullName>E-way Bill</fullName>
            </value>
            <value>
                <fullName>KAM</fullName>
            </value>
            <value>
                <fullName>Managed Services</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
            <value>
                <fullName>Recon</fullName>
            </value>
            <value>
                <fullName>ID</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>